Fix image stretching

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -47,6 +47,7 @@ a {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
   margin: $global-margin * 1.5 0;
   // box-shadow: 0 2px 4px 0 #CCCCCC;
 }
